@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  - designation
}

class Administrator {
  - name
  - address
  - phoneNumber
  - email
  - citizenCardNumber
  - employeeId
}

class VaccineType {
  - code
  - description
  - technology
}

Company "1" -- "*" VaccineType : promotes >
Administrator "1" -- "*" VaccineType : specifies >

@enduml